# zcash-test-vectors

./: .gitignore  LICENSE-MIT  README.md  bech32m.py  f4jumble.py  f4jumble_long.py  ff1.py  orchard_commitments.py  orchard_empty_roots.py  orchard_generators.py  orchard_group_hash.py  orchard_iso_pallas.py  orchard_key_components.py  orchard_map_to_curve.py  orchard_merkle_tree.py  orchard_note.py  orchard_note_encryption.py  orchard_pallas.py  orchard_poseidon.py  orchard_poseidon_hash.py  orchard_sinsemilla.py  orchard_utils.py  orchard_vesta.py  pyproject.toml  regenerate.sh  requirements.txt  sapling_generators.py  sapling_jubjub.py  sapling_key_components.py  sapling_merkle_tree.py  sapling_note_encryption.py  sapling_notes.py  sapling_pedersen.py  sapling_signatures.py  sapling_utils.py  sapling_zip32.py  test.py  transaction.py  tv_output.py  tv_rand.py  (+9 more)
.github/workflows/: test_vectors.yml
test-vectors/json/: bip_0032.json  f4jumble.json  f4jumble_long.json  orchard_asset_id.json  orchard_empty_roots.json  orchard_generators.json  orchard_group_hash.json  orchard_key_components.json  orchard_map_to_curve.json  orchard_merkle_tree.json  orchard_note_encryption.json  orchard_poseidon.json  orchard_poseidon_hash.json  orchard_sinsemilla.json  orchard_zip32.json  orchard_zsa_asset_base.json  orchard_zsa_digests.json  orchard_zsa_issuance_auth_sig.json  orchard_zsa_key_components.json  orchard_zsa_note_encryption.json  poseidon_fq.json  poseidon_fq_hash.json  sapling_generators.json  sapling_key_components.json  sapling_note_encryption.json  sapling_signatures.json  sapling_zip32.json  sapling_zip32_hard.json  transaction_legacy.json  transaction_v5.json  unified_address.json  unified_address_r2.json  unified_full_viewing_keys.json  unified_incoming_viewing_keys.json  unified_viewing_keys_r2.json  zip_0032_arbitrary.json  zip_0032_registered.json  zip_0143.json  zip_0233.json  zip_0243.json  (+4 more)
test-vectors/rust/: bip_0032.rs  f4jumble.rs  f4jumble_long.rs  issuance_auth_sig.rs  orchard_asset_base.rs  orchard_asset_id.rs  orchard_empty_roots.rs  orchard_generators.rs  orchard_group_hash.rs  orchard_key_components.rs  orchard_map_to_curve.rs  orchard_merkle_tree.rs  orchard_note_encryption.rs  orchard_poseidon.rs  orchard_poseidon_hash.rs  orchard_sinsemilla.rs  orchard_zip32.rs  orchard_zsa_asset_base.rs  orchard_zsa_digests.rs  orchard_zsa_issuance_auth_sig.rs  orchard_zsa_key_components.rs  orchard_zsa_note_encryption.rs  poseidon_fq.rs  poseidon_fq_hash.rs  sapling_generators.rs  sapling_key_components.rs  sapling_note_encryption.rs  sapling_signatures.rs  sapling_zip32.rs  sapling_zip32_hard.rs  transaction_legacy.rs  transaction_v5.rs  unified_address.rs  unified_address_r2.rs  unified_full_viewing_keys.rs  unified_incoming_viewing_keys.rs  unified_viewing_keys_r2.rs  zip_0032_arbitrary.rs  zip_0032_registered.rs  zip_0048.rs  (+7 more)
test-vectors/zcash/: bip_0032.json  f4jumble.json  orchard_asset_id.json  orchard_empty_roots.json  orchard_generators.json  orchard_group_hash.json  orchard_key_components.json  orchard_map_to_curve.json  orchard_merkle_tree.json  orchard_note_encryption.json  orchard_poseidon.json  orchard_poseidon_hash.json  orchard_sinsemilla.json  orchard_zip32.json  orchard_zsa_asset_base.json  orchard_zsa_digests.json  orchard_zsa_issuance_auth_sig.json  orchard_zsa_key_components.json  orchard_zsa_note_encryption.json  poseidon_fq.json  poseidon_fq_hash.json  sapling_generators.json  sapling_key_components.json  sapling_note_encryption.json  sapling_signatures.json  sapling_zip32.json  sapling_zip32_hard.json  transaction_legacy.json  unified_address.json  unified_address_r2.json  unified_full_viewing_keys.json  unified_incoming_viewing_keys.json  unified_viewing_keys_r2.json  zip_0032_arbitrary.json  zip_0032_registered.json  zip_0048.json  zip_0143.json  zip_0233.json  zip_0243.json  zip_0244.json  (+3 more)
zcash_test_vectors/: bip340_reference.py  f4jumble.py  f4jumble_long.py  ff1.py  hd_common.py  output.py  ripemd160.py  transaction.py  transaction_v6.py  transaction_zsa.py  unified_address.py  unified_address_r2.py  unified_encoding.py  unified_full_viewing_keys.py  unified_incoming_viewing_keys.py  unified_viewing_keys_r2.py  viewing_key_derivation.py  zip_0032.py  zip_0143.py  zip_0233.py  zip_0243.py  zip_0244.py  zip_0325.py  zip_nsm.py
zcash_test_vectors/orchard/: asset_base.py  asset_id.py  commitments.py  empty_roots.py  generators.py  group_hash.py  iso_pallas.py  issuance_auth_sig.py  key_components.py  map_to_curve.py  merkle_tree.py  note.py  note_encryption.py  pallas.py  poseidon.py  poseidon_fp.py  poseidon_fq.py  poseidon_hash.py  sinsemilla.py  utils.py  vesta.py  zip32.py
zcash_test_vectors/orchard_zsa/: asset_base.py  commitments.py  digests.py  issuance_auth_sig.py  key_components.py  note.py  note_encryption.py
zcash_test_vectors/sapling/: generators.py  jubjub.py  key_components.py  merkle_tree.py  note_encryption.py  notes.py  pedersen.py  redjubjub.py  zip32.py
zcash_test_vectors/transparent/: bip_0032.py  zip_0048.py  zip_0316.py  zip_0320.py
